--- a/test/lit.cfg
+++ b/test/lit.cfg
@@ -21,7 +21,7 @@ config.test_format = lit.formats.ShTest(execute_external=False)
 
 # suffixes: A list of file extensions to treat as test files
 # Note this can be overridden by lit.local.cfg files
-config.suffixes = ['.ll', '.c', '.cpp', '.pc']
+config.suffixes = ['.ll', '.c', '.cpp', '.kquery']
 
 # test_source_root: The root path where tests are located.
 config.test_source_root = os.path.dirname(__file__)
