--- a/Makefile.config.in
+++ b/Makefile.config.in
@@ -29,6 +29,7 @@ PROJ_INSTALL_ROOT := @prefix@
 
 KLEE_USE_CXX11 := @KLEE_USE_CXX11@
 
+ENABLE_STP := @ENABLE_STP@
 STP_CFLAGS := @STP_CFLAGS@
 STP_LDFLAGS := @STP_LDFLAGS@
 
