Ignore some generated files that will be visible if doing an in source build. Spotted by @domainexpert

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@ cscope.*
 *.out
 *.status
 
+# In source build files
+docs/doxygen.cfg
+include/klee/Config/CompileTimeInfo.h
 *.config
 
 config.h
