Propagate AddressSanitizer, LeakSanitizer (part of AddressSanitizer), MemorySanitzer and ThreadSanitizer environment variables when running lit tests.
This makes it easy suppress errors in sanitized versions of KLEE

--- a/test/lit.cfg
+++ b/test/lit.cfg
@@ -56,6 +56,14 @@ def addEnv(name):
 addEnv('HOME')
 addEnv('PWD')
 
+# Sanitizer environment variables
+addEnv('ASAN_OPTIONS')
+addEnv('ASAN_SYMBOLIZER_PATH')
+addEnv('LSAN_OPTIONS')
+addEnv('MSAN_OPTIONS')
+addEnv('MSAN_SYMBOLIZER_PATH')
+addEnv('TSAN_OPTIONS')
+
 # llvm-gcc on Ubuntu needs to be told where to look
 # for headers. If user has these in their environment
 # we should propagate to test environment
