--- a/test/lit.cfg
+++ b/test/lit.cfg
@@ -85,6 +85,8 @@ for name in subs:
 
 # Add a substitution for lli.
 config.substitutions.append( ('%lli', os.path.join(llvm_tools_dir, 'lli')) )
+# Add a substitution for llvm-as
+config.substitutions.append( ('%llvmas', os.path.join(llvm_tools_dir, 'llvm-as')) )
 
 # Get KLEE and Kleaver specific parameters passed on llvm-lit cmd line
 # e.g. llvm-lit --param klee_opts=--help
