Fix linking with stp via MetaSMT when not building with direct STP support

--- a/tools/klee/Makefile
+++ b/tools/klee/Makefile
@@ -29,8 +29,9 @@ ifeq ($(ENABLE_METASMT),1)
   LD.Flags += -L$(METASMT_ROOT)/../../deps/Z3-4.1/lib \
               -L$(METASMT_ROOT)/../../deps/boolector-1.5.118/lib \
               -L$(METASMT_ROOT)/../../deps/minisat-git/lib/ \
-              -L$(METASMT_ROOT)/../../deps/boost-1_52_0/lib 
+              -L$(METASMT_ROOT)/../../deps/boost-1_52_0/lib \
+              -L$(METASMT_ROOT)/../../deps/stp-svn/lib
   CXX.Flags += -DBOOST_HAS_GCC_TR1
-  CXX.Flags := $(filter-out -fno-exceptions,$(CXX.Flags)) 
-  LIBS += -lgomp -lboost_iostreams -lboost_thread -lboost_system -lmetaSMT -lz3 -lrt -lboolector -lminisat_core
+  CXX.Flags := $(filter-out -fno-exceptions,$(CXX.Flags))
+  LIBS += -lgomp -lboost_iostreams -lboost_thread -lboost_system -lmetaSMT -lz3 -lstp -lrt -lboolector -lminisat_core
 endif
