Refactor the MetaSMT makefile commands into its own file which can be included by tools that needs to link against MetaSMT. Apart from making the Makefile code cleaner this allowed the Solver unit test linking to succeed when not building with STP support.
Unfortunately when using MetaSMT as the core solver the Solver unit
tests do not pass. Clearly no one tried this before... :(

--- a/unittests/Solver/Makefile
+++ b/unittests/Solver/Makefile
@@ -12,3 +12,5 @@ include $(LLVM_SRC_ROOT)/unittests/Makefile.unittest
 ifneq ($(ENABLE_STP),0)
   LIBS += $(STP_LDFLAGS)
 endif
+
+include $(PROJ_SRC_ROOT)/MetaSMT.mk
