--- a/Makefile.config.in
+++ b/Makefile.config.in
@@ -36,6 +36,10 @@ STP_LDFLAGS := @STP_LDFLAGS@
 ENABLE_METASMT := @ENABLE_METASMT@
 METASMT_ROOT := @METASMT_ROOT@
 
+ENABLE_Z3 := @ENABLE_Z3@
+Z3_CFLAGS := @Z3_CFLAGS@
+Z3_LDFLAGS := @Z3_LDFLAGS@
+
 ENABLE_POSIX_RUNTIME := @ENABLE_POSIX_RUNTIME@
 ENABLE_UCLIBC := @ENABLE_UCLIBC@
 
