--- a/tools/kleaver/Makefile
+++ b/tools/kleaver/Makefile
@@ -23,4 +23,8 @@ ifneq ($(ENABLE_STP),0)
   LIBS += $(STP_LDFLAGS)
 endif
 
+ifneq ($(ENABLE_Z3),0)
+  LIBS += $(Z3_LDFLAGS)
+endif
+
 include $(PROJ_SRC_ROOT)/MetaSMT.mk
