--- a/include/klee/Config/config.h.in
+++ b/include/klee/Config/config.h.in
@@ -63,6 +63,9 @@
 /* Define to 1 if you have the <unistd.h> header file. */
 #undef HAVE_UNISTD_H
 
+/* Z3 needs a Z3_context passed to Z3_get_error_msg() */
+#undef HAVE_Z3_GET_ERROR_MSG_NEEDS_CONTEXT
+
 /* LLVM version is release (instead of development) */
 #undef LLVM_IS_RELEASE
 
