--- a/test/lit.site.cfg.in
+++ b/test/lit.site.cfg.in
@@ -18,6 +18,8 @@ config.llvmgxx = "@LLVMCXX@"
 config.enable_uclibc = True if @ENABLE_UCLIBC@ == 1 else False
 config.enable_posix_runtime = True if @ENABLE_POSIX_RUNTIME@ == 1 else False
 config.have_selinux = True if @HAVE_SELINUX@ == 1 else False
+config.enable_stp = True if @ENABLE_STP@ == 1 else False
+config.enable_z3 = True if @ENABLE_Z3@ == 1 else False
 
 # Current target
 config.target_triple = "@TARGET_TRIPLE@"
