Added missing copyright headers per klee/issue #301

--- a/unittests/Makefile
+++ b/unittests/Makefile
@@ -1,4 +1,11 @@
 ##===- unittests/Makefile ----------------------------------*- Makefile -*-===##
+# 
+#                      The KLEE Symbolic Virtual Machine
+# 
+#  This file is distributed under the University of Illinois Open Source
+#  License. See LICENSE.TXT for details.
+# 
+# ===----------------------------------------------------------------------===##
 
 LEVEL = ..
 
