--- a/lib/Solver/Makefile
+++ b/lib/Solver/Makefile
@@ -16,11 +16,5 @@ NO_INSTALL=1
 
 include $(LEVEL)/Makefile.common
 
-ifeq ($(ENABLE_METASMT),1)
-  include $(METASMT_ROOT)/share/metaSMT/metaSMT.makefile
-  CXX.Flags += -DBOOST_HAS_GCC_TR1
-  CXX.Flags := $(filter-out -fno-exceptions,$(CXX.Flags))
-  CXX.Flags := $(filter-out -fno-rtti,$(CXX.Flags))
-  CXX.Flags += $(metaSMT_CXXFLAGS)
-  CXX.Flags += $(metaSMT_INCLUDES)
-endif
+include $(PROJ_SRC_ROOT)/MetaSMT.mk
+
