rename the configure option --with-metasmt-default-solver to --with-metasmt-default-backend and improve the associated CXX flag

--- a/Makefile.config.in
+++ b/Makefile.config.in
@@ -35,7 +35,7 @@ STP_LDFLAGS := @STP_LDFLAGS@
 
 ENABLE_METASMT := @ENABLE_METASMT@
 METASMT_ROOT := @METASMT_ROOT@
-METASMT_DEFAULT_SOLVER := @METASMT_DEFAULT_SOLVER@
+METASMT_DEFAULT_BACKEND := @METASMT_DEFAULT_BACKEND@
 
 ENABLE_Z3 := @ENABLE_Z3@
 Z3_CFLAGS := @Z3_CFLAGS@
